--- a/webapp/view/ItemDetail.view.xml
+++ b/webapp/view/ItemDetail.view.xml
@@ -1,5 +1,7 @@
 <mvc:View xmlns:mvc="sap.ui.core.mvc" xmlns="sap.m"
           controllerName="com.tw.mypr.My_custom_pr.controller.ItemDetail"
+          xmlns:core="sap.ui.core"
+          xmlns:cust="http://schemas.sap.com/sapui5/extension/sap.ui.core.CustomData/1"
           xmlns:f="sap.ui.layout.form" xmlns:u="sap.ui.unified"
           xmlns:uxap="sap.uxap" xmlns:layout="sap.ui.layout">
     <uxap:ObjectPageLayout showFooter="{= ${ui>/editing} }" upperCaseAnchorBar="false"
@@ -55,7 +57,10 @@
                                 <Label text="{i18n>ItemDescription}"/>
                                 <Input value="{PRItem>/ItemDescription}"/>
                                 <Label text="{i18n>Material}"/>
-                                <Input showValueHelp="true" valueHelpRequest="onValHelpReq" value="{PRItem>/Material}"/>
+                                <Input cust:VHKey="Material" cust:text="{PRItem>/ItemDescription}"
+                                       showValueHelp="true"
+                                       valueHelpRequest="onValHelpReq" value="{PRItem>/Material}">
+                                </Input>
                                 <Label text="{i18n>MatGroup}"/>
                                 <Input value="{PRItem>/MatGroup}"/>
                                 <Label text="{i18n>SuppMatNum}"/>
@@ -96,19 +101,19 @@
                                 <Label text="{i18n>PRItemIsClosed}"/>
                                 <Input value="{PRItem>/PRItemIsClosed}"/>
                                 <Label text="{i18n>PRItemIsFixed}"/>
-                                <Checkbox checked="{PRItem>/PRItemIsFixed}"/>
+                                <CheckBox checked="{PRItem>/PRItemIsFixed}"/>
                                 <Label text="{i18n>PRItemIsFixed}"/>
-                                <Checkbox checked="{PRItem>/PRItemIsFixed}"/>
+                                <CheckBox checked="{PRItem>/PRItemIsFixed}"/>
                                 <Label required="true" text="{i18n>DelivDate}"/>
-                                <DatePicker displayFormatType="dd/MM/yyyy" checked="{PRItem>/DelivDate}"/>
-                                <Label text="{i18n>PreqDate}"/>
-                                <DatePicker displayFormatType="dd/MM/yyyy" checked="{PRItem>/PreqDate}"/>
-                                <Label required="true" text="{i18n>ReleaseDate}"/>
-                                <DatePicker displayFormatType="dd/MM/yyyy" checked="{PRItem>/ReleaseDate}"/>
-                                <Label required="true" text="{i18n>PlannedDelivDays}"/>
-                                <DatePicker displayFormatType="dd/MM/yyyy" checked="{PRItem>/PlannedDelivDays}"/>
-                                <Label required="true" text="{i18n>GRProcessDays}"/>
-                                <DatePicker displayFormatType="dd/MM/yyyy" checked="{PRItem>/GRProcessDays}"/>
+                                <!--<DatePicker displayFormatType="dd/MM/yyyy" checked="{PRItem>/DelivDate}"/>-->
+                                <!--<Label text="{i18n>PreqDate}"/>-->
+                                <!--<DatePicker displayFormatType="dd/MM/yyyy" checked="{PRItem>/PreqDate}"/>-->
+                                <!--<Label required="true" text="{i18n>ReleaseDate}"/>-->
+                                <!--<DatePicker displayFormatType="dd/MM/yyyy" checked="{PRItem>/ReleaseDate}"/>-->
+                                <!--<Label required="true" text="{i18n>PlannedDelivDays}"/>-->
+                                <!--<DatePicker displayFormatType="dd/MM/yyyy" checked="{PRItem>/PlannedDelivDays}"/>-->
+                                <!--<Label required="true" text="{i18n>GRProcessDays}"/>-->
+                                <!--<DatePicker displayFormatType="dd/MM/yyyy" checked="{PRItem>/GRProcessDays}"/>-->
                             </f:SimpleForm>
                         </uxap:blocks>
                     </uxap:ObjectPageSubSection>
